; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_cd-linux.c_LinuxCDGetStatus.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_cd-linux.c_LinuxCDGetStatus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hCDROM = common dso_local global i32 0, align 4
@CDROM_DRIVE_STATUS = common dso_local global i32 0, align 4
@CDSL_CURRENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @LinuxCDGetStatus to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @LinuxCDGetStatus() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @hCDROM, align 4
  %4 = load i32, i32* @CDROM_DRIVE_STATUS, align 4
  %5 = load i32, i32* @CDSL_CURRENT, align 4
  %6 = call i32 @ioctl(i32 %3, i32 %4, i32 %5)
  store i32 %6, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  switch i32 %7, label %11 [
    i32 130, label %8
    i32 129, label %9
    i32 128, label %10
  ]

8:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %12

9:                                                ; preds = %0
  store i32 2, i32* %1, align 4
  br label %12

10:                                               ; preds = %0
  store i32 3, i32* %1, align 4
  br label %12

11:                                               ; preds = %0
  store i32 2, i32* %1, align 4
  br label %12

12:                                               ; preds = %11, %10, %9, %8
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i32 @ioctl(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
